--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,35 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "next/core-web-vitals", // Preset from Next.js for optimal web vitals
+    "eslint:recommended", // Recommended ESLint rules
+    "plugin:@typescript-eslint/recommended", // Recommended rules for TypeScript
+    "plugin:react/recommended", // Recommended React rules
+    "prettier"
+  ],
+  "parser": "@typescript-eslint/parser", // Specifies the ESLint parser for TypeScript
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true // Allows for the parsing of JSX
+    },
+    "ecmaVersion": 2020, // Allows for the parsing of modern ECMAScript features
+    "sourceType": "module" // Allows for the use of imports
+  },
+  "plugins": [
+    "@typescript-eslint", // Uses the TypeScript plugin
+    "react-hooks", // Adds specific rules for React Hooks
+    "prettier"
+  ],
+  "rules": {
+    "prettier/prettier": "error",
+    "react/react-in-jsx-scope": "off", // Not needed with Next.js
+    "react-hooks/rules-of-hooks": "error", // Enforces the Rules of Hooks
+    "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
+    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }], // Warn on unused variables, ignore if prefixed with _
+    "no-console": "warn" // Warn when console statements are used
+  },
+  "settings": {
+    "react": {
+      "version": "detect" // Automatically detect the React version
+    }
+  }
 }
